java/nio/channels/SocketChannel/AdaptorStreams.java testConcurrentTimedReadWrite3(): failure

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 13
    • Affects Version/s: 13
    • Component/s: core-libs
    • b22

      Test: java/nio/channels/SocketChannel/AdaptorStreams.java

      TestNG case testConcurrentTimedReadWrite3() failed.

      ----------System.out:(69/3925)----------
      [TestNG] Running:
        java/nio/channels/SocketChannel/AdaptorStreams.java

      test AdaptorStreams.testConcurrentReadWrite1(): success
      test AdaptorStreams.testConcurrentReadWrite2(): success
      test AdaptorStreams.testConcurrentReadWrite3(): success
      test AdaptorStreams.testConcurrentTimedReadWrite1(): success
      test AdaptorStreams.testConcurrentTimedReadWrite2(): success
      test AdaptorStreams.testConcurrentTimedReadWrite3(): failure
      java.lang.AssertionError: expected [true] but found [false]
      at org.testng.Assert.fail(Assert.java:94)
      at org.testng.Assert.failNotEquals(Assert.java:496)
      at org.testng.Assert.assertTrue(Assert.java:42)
      at org.testng.Assert.assertTrue(Assert.java:52)
      at AdaptorStreams.lambda$testConcurrentTimedReadWrite3$41(AdaptorStreams.java:445)
      at AdaptorStreams.withConnection(AdaptorStreams.java:468)
      at AdaptorStreams.testConcurrentTimedReadWrite3(AdaptorStreams.java:432)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:567)
      at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:85)
      at org.testng.internal.Invoker.invokeMethod(Invoker.java:639)
      at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:821)
      at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1131)
      at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:124)
      at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:108)
      at org.testng.TestRunner.privateRun(TestRunner.java:773)
      at org.testng.TestRunner.run(TestRunner.java:623)
      at org.testng.SuiteRunner.runTest(SuiteRunner.java:357)
      at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:352)
      at org.testng.SuiteRunner.privateRun(SuiteRunner.java:310)
      at org.testng.SuiteRunner.run(SuiteRunner.java:259)
      at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
      at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
      at org.testng.TestNG.runSuitesSequentially(TestNG.java:1185)
      at org.testng.TestNG.runSuitesLocally(TestNG.java:1110)
      at org.testng.TestNG.run(TestNG.java:1018)
      at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:94)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:567)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
      at java.base/java.lang.Thread.run(Thread.java:830)
      test AdaptorStreams.testRead1(): success

            Assignee:
            Alan Bateman
            Reporter:
            Leo Jiang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: